--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A NodeJS API built to use alongside Feedget Frontend Application",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "dev": "ts-node-dev src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -25,8 +26,14 @@
   },
   "homepage": "https://github.com/RaphaPetrere/Feedget-API#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.31",
+    "prisma": "^3.14.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^3.14.0",
+    "express": "^4.18.1"
   }
 }
