--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A NodeJS API built to use alongside Feedget Frontend Application",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest",
     "dev": "ts-node-dev src/server.ts"
   },
   "repository": {
@@ -26,11 +26,13 @@
   },
   "homepage": "https://github.com/RaphaPetrere/Feedget-API#readme",
   "devDependencies": {
+    "@swc/jest": "^0.2.21",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.31",
     "@types/nodemailer": "^6.4.4",
     "jest": "^28.1.0",
     "prisma": "^3.14.0",
+    "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   },
