--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/RaphaPetrere/Feedget-API#readme",
   "devDependencies": {
     "@swc/jest": "^0.2.21",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
@@ -39,6 +40,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.14.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemailer": "^6.7.5"
   }
